# usingversion

./: README.md  pyproject.toml
.github/workflows/: test-matrix.yml
packageversion/: __init__.py
test/: test_packageversion.py
test/testme/: __init__.py
tests/: test_packageversion.py
tests/testme/: __init__.py
usingversion/: __init__.py
